--- a/.github/workflows/homebrew_check_updates.yml
+++ b/.github/workflows/homebrew_check_updates.yml
@@ -1,10 +1,15 @@
-name: Check for updates in brew definitions
-on:
+---
+name: Check and update brew definitions
+"on":
   schedule:
     - cron: '0 5 * * *'
   push:
+  workflow_dispatch:
 jobs:
   check_updates:
+    permissions:
+      contents: write
+      pull-requests: write
     name: "Homebrew spec update checker"
     runs-on: ubuntu-latest
     steps:
@@ -18,7 +23,7 @@ jobs:
           EXECUTE_COMMANDS: bash homebrew_check_latest_release.sh
           ONLY_DEFAULT_BRANCH: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_MESSAGE: 'Updated version automagically for ref: ${PR_HEAD_REF}'
+          COMMIT_MESSAGE: 'Update version automagically for ref: ${PR_HEAD_REF}'
           COMMIT_NAME: 'Version bump'
           COMMIT_EMAIL: 'james@terminaloutcomes.com'
           PR_BRANCH_NAME: 'brew-update-${PR_HEAD_REF}'
