--- a/.github/workflows/homebrew_check_updates.yml
+++ b/.github/workflows/homebrew_check_updates.yml
@@ -23,8 +23,8 @@ jobs:
           EXECUTE_COMMANDS: bash homebrew_check_latest_release.sh
           ONLY_DEFAULT_BRANCH: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_MESSAGE: 'Update version automagically for ref: ${PR_HEAD_REF}'
+          COMMIT_MESSAGE: 'Update version automagically for ref: ${PR_ID}'
           COMMIT_NAME: 'Version bump'
           COMMIT_EMAIL: 'james@terminaloutcomes.com'
-          PR_BRANCH_NAME: 'brew-update-${PR_HEAD_REF}'
+          PR_BRANCH_NAME: 'brew-update-${PR_ID}'
           PR_TITLE: 'Update to version'
