--- a/.github/workflows/homebrew_check_updates.yml
+++ b/.github/workflows/homebrew_check_updates.yml
@@ -14,13 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Run the check script
-        run: bash homebrew_check_latest_release.sh
+        run: ./homebrew_check_latest_release.py
 
       - name: Update homebrew spec file
         uses: technote-space/create-pr-action@v2
         with:
-          EXECUTE_COMMANDS: bash homebrew_check_latest_release.sh
+          EXECUTE_COMMANDS: ./homebrew_check_latest_release.py
           ONLY_DEFAULT_BRANCH: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMMIT_MESSAGE: 'Update version automagically for ref: ${PR_ID}'
